--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+	id "com.jfrog.bintray" version "1.0"
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
@@ -54,7 +58,7 @@ dependencies
     compile group: 'commons-lang', name: 'commons-lang', version: '2.+'
     compile group: 'commons-io', name: 'commons-io', version: '2.+'
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.+'
-    compile 'com.nativelibs4java:bridj:0.7-SNAPSHOT'
+    compile 'com.nativelibs4java:bridj:0.7.0'
 
     compile group: 'junit', name: 'junit', version: '4.+'
     testCompile group: 'junit', name: 'junit', version: '4.+'
