--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,7 @@ sourceSets
   }
 }
 
-
 sourceCompatibility = 1.8
-group = 'royer'
-version = '1.0'
 
 test 
 {
@@ -92,41 +89,78 @@ if (JavaVersion.current().isJava8Compatible()) {
     }
   }
 
-artifacts 
+//***********************************************************************************
+// PUBLISHING
+ 
+ 
+ group = 'net.rtlib'
+ version = '1.0'
+ 
+ artifacts
+ {
+	 archives sourcesJar
+	 archives javadocJar
+ }
+ 
+ publishing {
+	 publications {
+		 maven(MavenPublication) {
+			 from components.java
+			 artifact sourcesJar { classifier "sources" }
+		 }
+	 }
+ }
+
+if(hasProperty('bintray_user') && hasProperty('bintray_key') )
 {
-    archives sourcesJar
-    archives javadocJar
+	bintray {
+
+		// property must be set in ~/.gradle/gradle.properties
+		user = bintray_user
+		key =  bintray_key
+
+		publications = [
+			'maven'] //When uploading configuration files
+		dryRun = false //Whether to run this as dry-run, without deploying
+		publish = true //If version should be auto published after an upload
+		pkg {
+			repo = 'Drivers'
+			userOrg = 'rtlib' //An optional organization name when the repo belongs to one of the user's orgs
+			name = project.name
+			desc = project.name
+			websiteUrl = 'https://github.com/RTlib/NIRIOJ'
+			issueTrackerUrl = 'https://github.com/RTlib/NIRIOJ/issues'
+			vcsUrl = 'https://github.com/RTlib/NIRIOJ.git'
+			//licenses = ['Apache-2.0']
+			labels = [
+				'RTlib',
+				'Drivers',
+				'Devices',
+				'Hardware',
+				'Microscopy',
+				'Real-time'
+			]
+			publicDownloadNumbers = true
+			//attributes= ['a': ['ay1', 'ay2'], 'b': ['bee'], c: 'cee'] //Optional package-level attributes
+			//Optional version descriptor
+			version {
+				name = project.version //Bintray logical version name
+				desc = '.'
+				released  = new java.util.Date()
+				vcsTag = project.version
+				/*attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin'] //Optional version-level attributes
+				 gpg {
+				 sign = false //Determines whether to GPG sign the files. The default is false
+				 passphrase = 'passphrase' //Optional. The passphrase for GPG signing'
+				 }
+				 mavenCentralSync {
+				 sync = false //Optional (true by default). Determines whether to sync the version to Maven Central.
+				 user = 'userToken' //OSS user token
+				 password = 'paasword' //OSS user password
+				 close = '1' //Optional property. By default the staging repository is closed and artifacts are released to Maven Central. You can optionally turn this behaviour off (by puting 0 as value) and release the version manually.
+				 }  /**/          
+			}
+		}
+	}
+	/**/
 }
-
-uploadArchives 
-{
-    repositories 
-    {
-        mavenDeployer 
-        {
-            repository(url: "file:../../Repos/RTlibMavenRepo")
-        }
-    }
-}
-
-
-/*
-task jnaerate(type: JavaExec) {
-  if (System.properties['os.name'].toLowerCase().contains('windows')) 
-  {
-    classpath = files("./tools/jnaerator.jar")
-    //classpath += sourceSets.main.runtimeClasspath
-    main = 'com.ochafik.lang.jnaerator.JNAerator'
-    args = ['config.win.jnaerator'] as List
-  } 
-  else 
-  {
-    classpath = files("./tools/jnaerator.jar")
-    //classpath += sourceSets.main.runtimeClasspath
-    main = 'com.ochafik.lang.jnaerator.JNAerator'
-    args = ['config.nix.jnaerator'] as List
-  }
-}
-
-build.dependsOn jnaerate
-/**/
