Revert "fixed build"
This reverts commit 3a2e55e2170ee84e88e1e23b44fc8edc85db3da0.

--- a/build.gradle
+++ b/build.gradle
@@ -138,16 +138,16 @@ if(hasProperty('bintray_user') && hasProperty('bintray_key') )
 		dryRun = false //Whether to run this as dry-run, without deploying
 		publish = true //If version should be auto published after an upload
 		pkg {
-			repo = 'ClearControl'
-			userOrg = 'clearcontrol' //An optional organization name when the repo belongs to one of the user's orgs
+			repo = 'Drivers'
+			userOrg = 'rtlib' //An optional organization name when the repo belongs to one of the user's orgs
 			name = project.name
 			desc = project.name
-			websiteUrl = 'https://github.com/ClearControl/NIRIOJ'
-			issueTrackerUrl = 'https://github.com/ClearControl/NIRIOJ/issues'
-			vcsUrl = 'https://github.com/ClearControl/NIRIOJ.git'
-			licenses = ['GPL-3.0']
+			websiteUrl = 'https://github.com/RTlib/NIRIOJ'
+			issueTrackerUrl = 'https://github.com/RTlib/NIRIOJ/issues'
+			vcsUrl = 'https://github.com/RTlib/NIRIOJ.git'
+			//licenses = ['Apache-2.0']
 			labels = [
-				'ClearControl',
+				'RTlib',
 				'Drivers',
 				'Devices',
 				'Hardware',
