--- a/build.gradle
+++ b/build.gradle
@@ -138,13 +138,13 @@ if(hasProperty('bintray_user') && hasProperty('bintray_key') )
     dryRun = false //Whether to run this as dry-run, without deploying
     publish = true //If version should be auto published after an upload
     pkg {
-			repo = 'Drivers'
-			userOrg = 'rtlib' //An optional organization name when the repo belongs to one of the user's orgs
+			repo = 'ClearControl'
+			userOrg = 'clearcontrol' //An optional organization name when the repo belongs to one of the user's orgs
       name = project.name
       desc = project.name
-			websiteUrl = 'https://github.com/RTlib/NIRIOJ'
-			issueTrackerUrl = 'https://github.com/RTlib/NIRIOJ/issues'
-			vcsUrl = 'https://github.com/RTlib/NIRIOJ.git'
+			websiteUrl = 'https://github.com/ClearControl/NIRIOJ'
+			issueTrackerUrl = 'https://github.com/ClearControl/NIRIOJ/issues'
+			vcsUrl = 'https://github.com/ClearControl/NIRIOJ.git'
 			//licenses = ['Apache-2.0']
       labels = [
 				'RTlib',
