--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,22 @@
+
 plugins {
-	id "com.jfrog.bintray" version "1.2"
+    id "com.jfrog.bintray" version "1.2"
+    id "com.diffplug.gradle.spotless" version "3.1.0"
+    id "de.undercouch.download" version "3.4.3"
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
+
+
+// Master gradle file:
+apply from: 'https://github.com/ClearControl/master/blob/master/master.gradle?raw=true'
+
+//***********************************************************************************
+// JAVA CODE BUILDING
 
 sourceSets 
 {
@@ -34,6 +45,7 @@ sourceSets
 }
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 test 
 {
@@ -65,11 +77,12 @@ dependencies
 
 repositories 
 {
+    // Main repos:
+    mavenLocal()
     mavenCentral()
-    maven 
-    {
-        url "http://oss.sonatype.org/content/groups/public"
-    } 
+    jcenter()
+
+    maven { url "http://oss.sonatype.org/content/groups/public" }
 }
 
 
@@ -93,88 +106,21 @@ if (JavaVersion.current().isJava8Compatible()) {
 
 //***********************************************************************************
 // PUBLISHING
- 
-/*
- * Gets the version name from the latest Git tag
- */
-def getVersionName = {
-	->
-	def stdout = new ByteArrayOutputStream()
-	exec {
-		commandLine 'git', 'describe', '--tags'
-		standardOutput = stdout
-	}
-	return stdout.toString().trim()
-}
- 
- group = 'net.clearcontrol'
- version = getVersionName()
- 
- artifacts
- {
-	 archives sourcesJar
-	 archives javadocJar
- }
- 
- publishing {
-	 publications {
-		 maven(MavenPublication) {
-			 from components.java
-			 artifact sourcesJar { classifier "sources" }
-		 }
-	 }
- }
 
-if(hasProperty('bintray_user') && hasProperty('bintray_key') )
-{
-  bintray {
+group   = project.ext.groupname
+version = project.ext.versionsMap[project.name]
 
-    // property must be set in ~/.gradle/gradle.properties
-    user = bintray_user
-    key =  bintray_key
+artifacts
+        {
+            archives sourcesJar
+            archives javadocJar
+        }
 
-    publications = [
-      'maven'] //When uploading configuration files
-    dryRun = false //Whether to run this as dry-run, without deploying
-    publish = true //If version should be auto published after an upload
-    pkg {
-			repo = 'ClearControl'
-			userOrg = 'clearcontrol' //An optional organization name when the repo belongs to one of the user's orgs
-      name = project.name
-      desc = project.name
-			websiteUrl = 'https://github.com/ClearControl/NIRIOJ'
-			issueTrackerUrl = 'https://github.com/ClearControl/NIRIOJ/issues'
-			vcsUrl = 'https://github.com/ClearControl/NIRIOJ.git'
-			//licenses = ['Apache-2.0']
-      labels = [
-				'RTlib',
-        'Drivers',
-        'Devices',
-        'Hardware',
-        'Microscopy',
-        'Real-time'
-      ]
-      publicDownloadNumbers = true
-      //attributes= ['a': ['ay1', 'ay2'], 'b': ['bee'], c: 'cee'] //Optional package-level attributes
-      //Optional version descriptor
-      version {
-        name = project.version //Bintray logical version name
-        desc = '.'
-        released  = new java.util.Date()
-        vcsTag = project.version
-        /*attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin'] //Optional version-level attributes
-         gpg {
-         sign = false //Determines whether to GPG sign the files. The default is false
-         passphrase = 'passphrase' //Optional. The passphrase for GPG signing'
-         }
-         mavenCentralSync {
-         sync = false //Optional (true by default). Determines whether to sync the version to Maven Central.
-         user = 'userToken' //OSS user token
-         password = 'paasword' //OSS user password
-         close = '1' //Optional property. By default the staging repository is closed and artifacts are released to Maven Central. You can optionally turn this behaviour off (by puting 0 as value) and release the version manually.
-         }  /**/          
-      }
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+            artifact sourcesJar { classifier "sources" }
+        }
     }
-  }
-  /**/
 }
