offline build works

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ labview/builds/
 *.class
 .DS_Store
 labview/direttore/Direttore.aliases
+gradle/bintrayUpload.gradle
+gradle/codeformat.eclipse.xml
+gradle/installGitHooks
+gradle/master.gradle
+gradle/spotless.gradle
